--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,4 +1,6 @@
 <resources>
     <string name="app_name">BakingChef</string>
     <string name="title_item_detail">Item Detail</string>
+
+    <string name="servings_ingredients">Ingredients for </string>
 </resources>
