Working New Widget

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -9,4 +9,6 @@
 
     <string name="fragment_ingredients_name">Ingredients</string>
     <string name="fragment_steps_name">Steps</string>
+
+    <string name="widget_loading">Loading...</string>
 </resources>
